# VideoEditor

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/videoeditor/: MainActivity.kt  VideoEditorApplication.kt
app/src/main/java/com/example/videoeditor/data/: MediaPreviewEntity.kt  Settings.kt
app/src/main/java/com/example/videoeditor/data/logic/: ConverterData.kt  ConverterImage.kt  Exteintions.kt
app/src/main/java/com/example/videoeditor/data/model/: MediaFiles.kt
app/src/main/java/com/example/videoeditor/data/service/: CheckPermission.kt  MediaDataProvider.kt
app/src/main/java/com/example/videoeditor/di/: Injector.kt  ViewModelProviders.kt
app/src/main/java/com/example/videoeditor/screens/: ChooseMediaScreen.kt  CustomTabView.kt  MainActivity.kt  MainScreen.kt  NavStartScreen.kt
app/src/main/java/com/example/videoeditor/screens/choosemedia/: ChooseMediaScreen.kt  ChooseMediaViewModel.kt  CustomTabView.kt
app/src/main/java/com/example/videoeditor/screens/editmedia/: EditMediaScreen.kt  EditScreen.kt  MeasureRow.kt
app/src/main/java/com/example/videoeditor/screens/main/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/example/videoeditor/theme/: Colors.kt  Theme.kt  Type.kt
app/src/main/java/com/example/videoeditor/ui/screens/: AppStartScreen.kt
app/src/main/java/com/example/videoeditor/ui/screens/choosemedia/: ChooseMediaScreen.kt  ChooseMediaViewModel.kt
app/src/main/java/com/example/videoeditor/ui/screens/editmedia/: EditScreen.kt  MeasureRow.kt
app/src/main/java/com/example/videoeditor/ui/screens/main/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/example/videoeditor/ui/widgets/: CircleProgressBar.kt  CustomTabView.kt
app/src/main/java/com/example/videoeditor/utility/: EditViewModel.kt  Screen.kt
app/src/main/res/drawable/: ic_add.xml  ic_camera.xml  ic_choose.xml  ic_close.xml  ic_dialog_delete.xml  ic_dialog_edit.xml  ic_dialog_share.xml  ic_full_screen.xml  ic_galery.xml  ic_lightning.xml  ic_preview_settings.xml  ic_settings.xml  ic_share.xml
app/src/main/res/values/: attr.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
videomanager/: build.gradle
videomanager/src/main/cpp/: CMakeLists.txt  video_engine.cpp  video_manager.cpp
videomanager/src/main/cpp/ffmpegDecoder/: FFmpegDecode.h  FFmpegDecoder.cpp  FFmpegDecoder.h  ffmpeg_headers_wrapper.h
videomanager/src/main/cpp/player/: VideoPlayer.cpp  VideoPlayer.h
videomanager/src/main/cpp/utils/: Extensions.cpp  Extensions.h  Logger.h
videomanager/src/main/java/com/example/videomanager/: VideoManager.kt
